joinus ui design overflow issues solved

--- a/DishDispatchProject/src/main/webapp/customer/CSS/Header.css
+++ b/DishDispatchProject/src/main/webapp/customer/CSS/Header.css
@@ -7,8 +7,6 @@
     background-color: #CEE4CE;
     position: sticky;
     top: 0;
-    left: 0;
-    right: 0;
     z-index: 100;
 }
 .left-section{
@@ -22,6 +20,7 @@
     flex: 2;
     justify-content: space-around;
     align-items: center;
+    flex-shrink: 0;
 }
 .right-section a{
     color: #404040;
